# voxys

./: .asan_suppressions  .bazelrc  .gitignore  .msan_suppressions  .tsan_suppressions  AGENTS.md  BUILD  CMakeLists.txt  IMPLEMENTATION.md  MODULE.bazel  Makefile  README.md  SPECS.md  WORKSPACE  pyproject.toml  setup.sh  shell.nix  voxy.cfg
.githooks/: pre-commit
.github/workflows/: pages.yml
cmake/: CompilerWarnings.cmake  FindDawn.cmake  FindWGPU.cmake
data/: BUILD
docs/: terrain_diffusion.md
inspiration/water-pro/: README.md
requirements/: terrain-diffusion.txt
scripts/: build_webgpu.sh  compare_screenshots.py  fetch_deps.sh  screenshot_tour.sh  setup-hooks.sh
settings/: configure_copts.bzl  copts.bzl  dependencies.bzl
shaders/: .gitkeep  BUILD  cull_terrain.wgsl  debug_depth.wgsl  decorations.wgsl  mip_generate.wgsl  ray_blit.wgsl  terrain.wgsl  terrain_raycast.wgsl
specs/: heightmap-compression.md  interaction-tools.md  logging-config.md  platform-build.md  rendering-architecture.md  shader-specifications.md  shader_optimization_tricks.md  svo-architecture.md  virtual-file-system.md
src/: BUILD  CMakeLists.txt
src/app/: .gitkeep  BUILD  application.cpp  application.hpp  debug_overlay.cpp  debug_overlay.hpp
src/camera/: .gitkeep  BUILD  camera.cpp  camera.hpp  character_controller.cpp  character_controller.hpp  controller.cpp  controller.hpp
src/core/: BUILD  config.cpp  config.hpp  log.cpp  log.hpp  stb_impl.cpp  timer.hpp
src/engine/platform/: BUILD  input.hpp  window.hpp
src/engine/platform/native/: entry.cpp  input.cpp  window.cpp
src/engine/platform/wasm/: entry.cpp  input.cpp  window.cpp
src/gpu/: .gitkeep  BUILD  context.cpp  context.hpp  resources.cpp  resources.hpp  webgpu_compat.hpp
src/perf/: BUILD  benchmark.cpp  benchmark.hpp  gpu_timer.cpp  gpu_timer.hpp
src/render/: .gitkeep  BUILD  blit_path.cpp  blit_path.hpp  debug_visualizer.cpp  debug_visualizer.hpp  decoration_renderer.cpp  decoration_renderer.hpp  frustum.hpp  mip_pipeline.cpp  mip_pipeline.hpp  raycast_path.cpp  raycast_path.hpp  triangle_path.cpp  triangle_path.hpp
src/terrain/: .gitkeep  BUILD  biomes.cpp  biomes.hpp  compression.cpp  compression.hpp  decorations.cpp  decorations.hpp  heightmap.cpp  heightmap.hpp  mip_generator.cpp  mip_generator.hpp  textures.cpp  textures.hpp
src/voxel/: BUILD  morton.hpp  svo_buffers.cpp  svo_buffers.hpp  svo_types.hpp
tests/: BUILD  CMakeLists.txt  test_application.cpp  test_benchmark.cpp  test_biomes.cpp  test_blit_path.cpp  test_camera.cpp  test_character_controller.cpp  test_compression.cpp  test_config.cpp  test_controller.cpp  test_debug_visualizer.cpp  test_decorations.cpp  test_gpu_context.cpp  test_gpu_resources.cpp  test_heightmap.cpp  test_input.cpp  test_log.cpp  test_mip_generator.cpp  test_mip_pipeline.cpp  test_raycast_path.cpp  test_shader_blit.cpp  test_shader_decorations.cpp  test_shader_raycast.cpp  test_shader_terrain.cpp  test_svo_core.cpp  test_terrain_textures.cpp  test_timer.cpp  test_triangle_path.cpp  test_web_assets.cpp  test_window.cpp
tools/: BUILD  CMakeLists.txt  download_cc0_texture_pack.py  process_assets.py  serve_wasm.sh  terrain_diffusion_import.py  test_terrain_diffusion_import.py
tools/ldh_tool/: .gitkeep  BUILD  CMakeLists.txt  main.cpp
web/: BUILD  WATER_PRO_VENDORING.md  index.html  loader.js  style.css  water-pro-adapter.js
