# ═══════════════════════════════════════════════════════════════════════════════
# tools/CMakeLists.txt
# ═══════════════════════════════════════════════════════════════════════════════
# Command-line tools for voxy project.
# ═══════════════════════════════════════════════════════════════════════════════

# ─────────────────────────────────────────────────────────────────────────────
# ldh_tool - Heightmap compression utility
# ─────────────────────────────────────────────────────────────────────────────
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/ldh_tool/CMakeLists.txt")
    add_subdirectory(ldh_tool)
endif()

